--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:17:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:18:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -212,10 +212,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 Not started</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
       <td class="greyout">Brooks Koepka +3
 E thru 8</td>
     </tr>
@@ -230,8 +230,8 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
       <td class="greyout">Xander Schauffele(W) +4
 +2 thru 9</td>
     </tr>
@@ -248,8 +248,8 @@ E thru 9</td>
 +1 thru 9</td>
       <td class="greyout leftborder">Jon Rahm(W) +1
 -1 thru 9</td>
-      <td class="greyout">Viktor Hovland +1
-+1 thru 8</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -260,12 +260,12 @@ Not started</td>
 -1 thru 15</td>
       <td>Scottie Scheffler -3
 Not started</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Tyrrell Hatton +1
+      <td>Tyrrell Hatton +1
 +1 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 10</td>
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -279,7 +279,7 @@ E thru 9</td>
       <td>Brooks Koepka +3
 E thru 8</td>
       <td class="greyout leftborder">Sam Burns +6
-+3 thru 10</td>
++3 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -292,12 +292,12 @@ Not started</td>
 -1 thru 15</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout">Jon Rahm +1
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 9</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -313,7 +313,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 10</td>
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -340,28 +340,12 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay(W) -2
 E thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 -1 thru 9</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 15</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele +4
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Sam Burns +6
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -377,7 +361,7 @@ E thru 8</td>
       <td class="greyout leftborder">Jon Rahm +1
 -1 thru 9</td>
       <td class="greyout">Robert MacIntyre +2
-+1 thru 16</td>
++1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -442,6 +426,22 @@ Not started</td>
 -1 thru 9</td>
       <td class="greyout">Brooks Koepka +3
 E thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 15</td>
+      <td>Jordan Spieth +1
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 9</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -521,7 +521,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 9</td>
       <td class="greyout">Robert MacIntyre +2
-+1 thru 16</td>
++1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -556,22 +556,6 @@ E thru 8</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 8</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -588,38 +572,6 @@ E thru 8</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 15</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Shane Lowry(W) +1
-Not started</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Brian Harman +2
-E thru 3</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Rory McIlroy +1
-E thru 8</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -633,7 +585,7 @@ E thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 10</td>
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -644,10 +596,10 @@ E thru 8</td>
 -2 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Rory McIlroy +1
+      <td>Rory McIlroy +1
 E thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
       <td class="greyout">Xander Schauffele(W) +4
 +2 thru 9</td>
     </tr>
@@ -684,6 +636,22 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 8</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neville Spillman</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -3
@@ -697,7 +665,23 @@ E thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 8</td>
       <td class="greyout">Sam Burns +6
-+3 thru 10</td>
++3 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 15</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Shane Lowry(W) +1
+Not started</td>
+      <td>Brian Harman +2
+E thru 3</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout">Sam Burns +6
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -716,6 +700,22 @@ Not started</td>
 E thru 8</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Rory McIlroy +1
+E thru 8</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -724,10 +724,10 @@ E thru 9</td>
 -2 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 -1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 9</td>
       <td class="greyout">Xander Schauffele +4
 +2 thru 9</td>
     </tr>
@@ -740,12 +740,12 @@ E thru 9</td>
 +1 thru 10</td>
       <td>Rory McIlroy(W) +1
 E thru 8</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 -1 thru 9</td>
-      <td class="greyout">Jordan Spieth +1
+      <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 9</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -772,28 +772,12 @@ E thru 9</td>
 +1 thru 10</td>
       <td>Jordan Spieth(W) +1
 -1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
--1 thru 9</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 8</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-E thru 9</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 9</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Xander Schauffele +4
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -820,10 +804,10 @@ Not started</td>
 -2 thru 10</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Rory McIlroy +1
+      <td>Rory McIlroy +1
 E thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -850,28 +834,28 @@ Not started</td>
 Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
       <td>Rory McIlroy +1
 E thru 8</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout">Bubba Watson +1
-E thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 8</td>
+      <td class="greyout leftborder">Bubba Watson +1
+E thru 13</td>
+      <td class="greyout">Viktor Hovland +2
++2 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -2
+E thru 9</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
       <td class="greyout">Xander Schauffele +4
 +2 thru 9</td>
     </tr>
@@ -892,22 +876,6 @@ E thru 8</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">0</td>
-      <td>Collin Morikawa(W) -1
--2 thru 10</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Rory McIlroy +1
-E thru 8</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +6
-+3 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">0</td>
       <td>Corey Conners -3
@@ -922,22 +890,6 @@ E thru 8</td>
 +2 thru 9</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) +1
--1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Rory McIlroy +1
-E thru 8</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 8</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -956,52 +908,68 @@ Not started</td>
 +2 thru 9</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 9</td>
+      <td>Jordan Spieth +1
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 8</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">1</td>
+      <td>Collin Morikawa(W) -1
+-2 thru 10</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Rory McIlroy +1
+E thru 8</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +7
++4 thru 16</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 9</td>
+      <td>Rory McIlroy +1
+E thru 8</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 8</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">3</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
+      <td>Viktor Hovland(W) +2
++2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 8</td>
       <td class="greyout">Patrick Reed +3
 +1 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">3</td>
-      <td>Will Zalatoris E
-+1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Jon Rahm +1
--1 thru 9</td>
-      <td>Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">3</td>
-      <td>Will Zalatoris E
-+1 thru 9</td>
-      <td>Jon Rahm(W) +1
--1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 8</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1016,6 +984,38 @@ E thru 8</td>
 E thru 8</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 9</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">4</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Jon Rahm +1
+-1 thru 9</td>
+      <td>Jordan Spieth +1
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +6
++3 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">4</td>
+      <td>Will Zalatoris E
++1 thru 9</td>
+      <td>Jon Rahm(W) +1
+-1 thru 9</td>
+      <td>Jordan Spieth +1
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 8</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -1047,19 +1047,19 @@ Not started</td>
       <td>Xander Schauffele +4
 +2 thru 9</td>
       <td class="greyout leftborder">Sam Burns +6
-+3 thru 10</td>
++3 thru 11</td>
       <td class="greyout">Justin Rose +8
 +4 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">6</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
+      <td class="bigbold">7</td>
       <td>Jon Rahm +1
 -1 thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
       <td>Brooks Koepka +3
 E thru 8</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -1069,13 +1069,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">7</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
+      <td class="bigbold">8</td>
       <td>Jon Rahm +1
 -1 thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
@@ -1085,11 +1085,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Jon Rahm(W) +1
 -1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
       <td>Brooks Koepka +3
 E thru 8</td>
       <td>Xander Schauffele +4
