--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:17:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:18:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 10</td>
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -172,22 +172,6 @@ E thru 8</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 15</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -204,16 +188,32 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 15</td>
+      <td>Jordan Spieth +1
+-1 thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 9</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Sungjae Im -3
 +2 thru 12</td>
       <td>Patrick Cantlay -2
 E thru 9</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 8</td>
+      <td>Viktor Hovland(W) +2
++2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 8</td>
       <td class="greyout">Justin Thomas +4
@@ -221,15 +221,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Joaquin Niemann -3
 Not started</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
       <td>Rory McIlroy +1
 E thru 8</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
 Not started</td>
       <td class="greyout">Justin Thomas +4
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 9</td>
       <td class="greyout">Robert MacIntyre +2
-+1 thru 16</td>
++1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -324,10 +324,10 @@ E thru 9</td>
 +1 thru 10</td>
       <td>Jordan Spieth(W) +1
 -1 thru 9</td>
-      <td>Viktor Hovland +1
-+1 thru 8</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 -1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
       <td class="greyout">Brooks Koepka +3
 E thru 8</td>
     </tr>
@@ -381,13 +381,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">5</td>
       <td>Collin Morikawa -1
 -2 thru 10</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 8</td>
       <td>Jon Rahm +1
 -1 thru 9</td>
+      <td>Viktor Hovland(W) +2
++2 thru 9</td>
       <td>Brooks Koepka +3
 E thru 8</td>
       <td class="greyout leftborder">Patrick Reed +3
