--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:19:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:19:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,10 +166,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris E
 +1 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td class="greyout leftborder">Russell Henley +3
++2 thru 15</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 8</td>
-      <td class="greyout">Russell Henley +4
-+3 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -261,7 +261,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Tyrrell Hatton +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
@@ -677,7 +677,7 @@ Not started</td>
       <td>Shane Lowry(W) +1
 Not started</td>
       <td>Brian Harman +2
-E thru 3</td>
+E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
