--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:19:04 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:19:47 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -277,7 +277,7 @@ E thru 9</td>
       <td>Jon Rahm +1
 -1 thru 9</td>
       <td>Tyrrell Hatton +1
-+1 thru 10</td>
++1 thru 11</td>
       <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -349,17 +349,17 @@ E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">3</td>
+      <td class="bigbold">2</td>
       <td>Corey Conners -3
 -1 thru 15</td>
       <td>Dustin Johnson -2
 +1 thru 10</td>
+      <td>Russell Henley +3
++2 thru 15</td>
       <td>Xander Schauffele(W) +4
 +2 thru 9</td>
-      <td>Justin Thomas +4
+      <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
-      <td class="greyout leftborder">Russell Henley +4
-+3 thru 14</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
