--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:28:23 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:29:06 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -150,8 +150,8 @@ Not started</td>
 +1 thru 10</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
+      <td class="greyout leftborder">Shane Lowry +2
++1 thru 1</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -183,7 +183,7 @@ Not started</td>
       <td>Will Zalatoris E
 +1 thru 10</td>
       <td class="greyout leftborder">Russell Henley +3
-+2 thru 15</td>
++2 thru 16</td>
       <td class="greyout">Brooks Koepka +3
 E thru 9</td>
     </tr>
@@ -252,22 +252,6 @@ Not started</td>
 +3 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 10</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 9</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Don Shaw</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -4
@@ -316,6 +300,22 @@ E thru 10</td>
 +3 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 10</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +2
++1 thru 1</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -3
@@ -358,8 +358,8 @@ E thru 10</td>
 Not started</td>
       <td>Will Zalatoris E
 +1 thru 10</td>
-      <td class="greyout leftborder">Shane Lowry +1
-Not started</td>
+      <td class="greyout leftborder">Shane Lowry +2
++1 thru 1</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -420,12 +420,12 @@ Not started</td>
 -1 thru 15</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 -1 thru 10</td>
-      <td class="greyout">Viktor Hovland +2
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
+      <td class="greyout">Shane Lowry +2
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -524,38 +524,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Matthew Fitzpatrick -1
-E thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 10</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 9</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 15</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 9</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -4
@@ -620,6 +588,22 @@ Not started</td>
 +2 thru 9</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Matthew Fitzpatrick -1
+E thru 9</td>
+      <td>Will Zalatoris E
++1 thru 10</td>
+      <td>Shane Lowry +2
++1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 9</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson(W) -2
@@ -628,24 +612,24 @@ Not started</td>
 Not started</td>
       <td>Matthew Fitzpatrick -1
 E thru 9</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 -1 thru 9</td>
+      <td class="greyout leftborder">Shane Lowry +2
++1 thru 1</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
+      <td>Corey Conners -3
+-1 thru 15</td>
+      <td>Scottie Scheffler -3
 Not started</td>
-      <td>Patrick Cantlay -2
-E thru 10</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Viktor Hovland +2
-+2 thru 9</td>
+      <td>Jordan Spieth +1
+-1 thru 9</td>
+      <td>Shane Lowry +2
++1 thru 1</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -664,22 +648,6 @@ E thru 10</td>
 -1 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners -3
--1 thru 15</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Shane Lowry(W) +1
-Not started</td>
-      <td>Brian Harman +2
-E thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 9</td>
       <td class="greyout">Sam Burns +6
 +3 thru 11</td>
     </tr>
@@ -764,6 +732,22 @@ Not started</td>
 Out With Injury</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 10</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td>Shane Lowry +2
++1 thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 9</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -778,6 +762,22 @@ E thru 10</td>
 +2 thru 9</td>
       <td class="greyout">Brooks Koepka +3
 E thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners -3
+-1 thru 15</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Shane Lowry(W) +2
++1 thru 1</td>
+      <td>Brian Harman +2
+E thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout">Sam Burns +6
++3 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
