--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:29:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:29:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -492,22 +492,6 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners(W) -3
--1 thru 15</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Jon Rahm +1
--1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith(W) -4
@@ -540,6 +524,22 @@ E thru 9</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners(W) -3
+-1 thru 15</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Jon Rahm +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 9</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 17</td>
+    </tr>
+    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -554,22 +554,6 @@ E thru 9</td>
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
 +3 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners -3
--1 thru 15</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 10</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 9</td>
-      <td class="greyout">Xander Schauffele(W) +4
-+2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -652,22 +636,6 @@ E thru 9</td>
 +3 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-3</td>
-      <td>Patrick Cantlay -2
-E thru 10</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Jon Rahm(W) +1
--1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -3
@@ -680,22 +648,6 @@ E thru 9</td>
 +2 thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 10</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 10</td>
-      <td>Jon Rahm +1
--1 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 9</td>
       <td class="greyout">Xander Schauffele +4
 +2 thru 9</td>
     </tr>
@@ -716,20 +668,20 @@ E thru 9</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 10</td>
-      <td>Collin Morikawa(W) -1
--2 thru 10</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
+      <td>Corey Conners -3
+-1 thru 15</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Will Zalatoris E
++1 thru 10</td>
+      <td>Rory McIlroy +1
+E thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout">Xander Schauffele(W) +4
++2 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -780,6 +732,54 @@ E thru 4</td>
 +3 thru 11</td>
     </tr>
     <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+E thru 10</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Jon Rahm(W) +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 9</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -2
+E thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Will Zalatoris E
++1 thru 10</td>
+      <td>Jon Rahm +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 9</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -2
+E thru 10</td>
+      <td>Collin Morikawa(W) E
+-1 thru 11</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Jon Rahm +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 9</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -3
@@ -794,22 +794,6 @@ E thru 9</td>
 Not started</td>
       <td class="greyout">Xander Schauffele +4
 +2 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 10</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 9</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -892,20 +876,20 @@ E thru 9</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay -2
-E thru 10</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Jordan Spieth +1
--1 thru 9</td>
-      <td>Brooks Koepka +3
-E thru 9</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">0</td>
+      <td>Tiger Woods(W) -1
 Not started</td>
-      <td class="greyout">Xander Schauffele +4
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Will Zalatoris E
++1 thru 10</td>
+      <td>Rory McIlroy +1
+E thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -924,22 +908,6 @@ E thru 9</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">1</td>
-      <td>Collin Morikawa(W) -1
--2 thru 10</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Viktor Hovland +2
-+2 thru 9</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +7
-+4 thru 16</td>
-    </tr>
-    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler -3
@@ -956,20 +924,36 @@ E thru 9</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Jon Rahm +1
--1 thru 10</td>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">2</td>
+      <td>Patrick Cantlay -2
+E thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 9</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 9</td>
-      <td class="greyout">Patrick Reed +3
-+1 thru 14</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">2</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Collin Morikawa(W) E
+-1 thru 11</td>
+      <td>Rory McIlroy +1
+E thru 9</td>
+      <td>Viktor Hovland +2
++2 thru 9</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +7
++4 thru 16</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1002,6 +986,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Sam Burns +6
 +3 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Jon Rahm +1
+-1 thru 10</td>
+      <td>Jordan Spieth +1
+-1 thru 9</td>
+      <td>Viktor Hovland(W) +2
++2 thru 9</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 9</td>
+      <td class="greyout">Patrick Reed +3
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
