--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:29:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:29:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -173,13 +173,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith(W) -4
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Rory McIlroy +1
 E thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -189,13 +189,13 @@ E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-5</td>
+      <td class="bigbold">-4</td>
       <td>Sungjae Im -4
 +1 thru 13</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Viktor Hovland(W) +2
 +2 thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -218,22 +218,6 @@ E thru 9</td>
 Not started</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners(W) -3
--1 thru 15</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Jon Rahm +1
--1 thru 10</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 9</td>
-      <td class="greyout">Robert MacIntyre +2
-+1 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -268,22 +252,6 @@ E thru 10</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-3</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Daniel Berger -1
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 9</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -300,14 +268,46 @@ E thru 9</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-3</td>
-      <td>Patrick Cantlay -2
-E thru 10</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td>Corey Conners(W) -3
+-1 thru 15</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Jon Rahm +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Jordan Spieth +1
+-1 thru 9</td>
+      <td class="greyout">Robert MacIntyre +2
++1 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
       <td>Tony Finau -1
 Not started</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
+      <td>Will Zalatoris E
++1 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 9</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+E thru 10</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Jon Rahm(W) +1
 -1 thru 10</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -381,9 +381,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">5</td>
-      <td>Collin Morikawa -1
--2 thru 10</td>
+      <td class="bigbold">6</td>
+      <td>Collin Morikawa E
+-1 thru 11</td>
       <td>Jon Rahm +1
 -1 thru 10</td>
       <td>Viktor Hovland(W) +2
