--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:31:15 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:31:58 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ Not started</td>
       <td>Corey Conners -3
 -1 thru 15</td>
       <td>Dustin Johnson(W) -2
-+1 thru 10</td>
++1 thru 11</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
       <td class="greyout leftborder">Shane Lowry +2
@@ -249,7 +249,7 @@ Not started</td>
       <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -297,7 +297,7 @@ E thru 10</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -391,7 +391,7 @@ E thru 10</td>
       <td>Brooks Koepka +3
 E thru 9</td>
       <td class="greyout leftborder">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -435,7 +435,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
       <td>Dustin Johnson -2
-+1 thru 10</td>
++1 thru 11</td>
       <td>Adam Scott +2
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W) +3
@@ -553,7 +553,7 @@ E thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -591,7 +591,7 @@ Not started</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson(W) -2
-+1 thru 10</td>
++1 thru 11</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Matthew Fitzpatrick -1
@@ -633,7 +633,7 @@ E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -657,7 +657,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
       <td>Dustin Johnson -2
-+1 thru 10</td>
++1 thru 11</td>
       <td>Rory McIlroy(W) +1
 E thru 9</td>
       <td>Jon Rahm +1
@@ -705,7 +705,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
       <td>Dustin Johnson -2
-+1 thru 10</td>
++1 thru 11</td>
       <td>Jordan Spieth(W) +1
 -1 thru 9</td>
       <td>Jon Rahm +1
@@ -729,7 +729,7 @@ E thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -822,10 +822,10 @@ Not started</td>
 E thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 9</td>
-      <td class="greyout leftborder">Bubba Watson +1
-E thru 13</td>
-      <td class="greyout">Viktor Hovland +2
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
+      <td class="greyout">Bubba Watson +2
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -985,7 +985,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -1047,7 +1047,7 @@ Not started</td>
       <td>Xander Schauffele +4
 +2 thru 9</td>
       <td class="greyout leftborder">Sam Burns +6
-+3 thru 11</td>
++3 thru 12</td>
       <td class="greyout">Justin Rose +8
 +4 thru 16</td>
     </tr>
