--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:34:07 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:34:50 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -215,7 +215,7 @@ E thru 9</td>
       <td>Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout leftborder">Tommy Fleetwood(W) +3
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -313,7 +313,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 9</td>
       <td class="greyout">Robert MacIntyre +2
-+1 thru 17</td>
++1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
