--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:36:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:36:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -169,7 +169,7 @@ E thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -185,7 +185,7 @@ E thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -217,7 +217,7 @@ E thru 16</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout">Xander Schauffele(W) +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -265,7 +265,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 10</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -311,7 +311,7 @@ Not started</td>
       <td>Jon Rahm(W) +1
 -1 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Sam Burns +6
 +3 thru 12</td>
     </tr>
@@ -375,7 +375,7 @@ E thru 10</td>
       <td>Brooks Koepka +3
 E thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Billy Horschel +6
 +4 thru 11</td>
     </tr>
@@ -409,7 +409,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka(W) +3
 E thru 9</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -457,7 +457,7 @@ E thru 16</td>
       <td class="greyout leftborder">Webb Simpson +1
 +2 thru 13</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -473,7 +473,7 @@ E thru 16</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 10</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -487,7 +487,7 @@ Not started</td>
       <td>Marc Leishman +2
 +1 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -503,7 +503,7 @@ Not started</td>
       <td>Rory McIlroy(W) +1
 E thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -519,7 +519,7 @@ Not started</td>
       <td>Brooks Koepka +3
 E thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Sam Burns +6
 +3 thru 12</td>
     </tr>
@@ -535,7 +535,7 @@ E thru 16</td>
       <td>Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -553,7 +553,7 @@ E thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -617,7 +617,7 @@ E thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -641,7 +641,7 @@ E thru 9</td>
       <td>Corey Conners(W) -2
 E thru 16</td>
       <td>Daniel Berger -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 11</td>
       <td>Jon Rahm +1
@@ -729,7 +729,7 @@ E thru 10</td>
       <td class="greyout leftborder">Viktor Hovland(W) +2
 +2 thru 9</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -761,7 +761,7 @@ E thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -777,7 +777,7 @@ E thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout">Xander Schauffele(W) +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -817,7 +817,7 @@ E thru 4</td>
       <td>Patrick Cantlay -2
 E thru 10</td>
       <td>Daniel Berger -1
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm +1
 -1 thru 10</td>
       <td>Viktor Hovland +2
@@ -825,7 +825,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -889,7 +889,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
@@ -903,7 +903,7 @@ E thru 9</td>
       <td>Jordan Spieth +1
 -1 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -921,7 +921,7 @@ E thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -937,7 +937,7 @@ E thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -967,7 +967,7 @@ E thru 9</td>
       <td>Brooks Koepka +3
 E thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -1031,7 +1031,7 @@ E thru 9</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -1045,7 +1045,7 @@ E thru 9</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td>Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout leftborder">Sam Burns +6
 +3 thru 12</td>
       <td class="greyout">Justin Rose +9
@@ -1065,7 +1065,7 @@ E thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
@@ -1079,7 +1079,7 @@ Not started</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -1093,7 +1093,7 @@ Missed Cut</td>
       <td>Brooks Koepka +3
 E thru 9</td>
       <td>Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen
