--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:36:16 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:36:59 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ E thru 16</td>
       <td>Jordan Spieth +1
 -1 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Sam Burns +6
 +3 thru 12</td>
     </tr>
@@ -185,7 +185,7 @@ E thru 9</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 9</td>
       <td class="greyout">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -247,7 +247,7 @@ E thru 16</td>
       <td>Viktor Hovland +2
 +2 thru 9</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -273,7 +273,7 @@ Not started</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Daniel Berger -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 11</td>
       <td>Will Zalatoris E
@@ -305,7 +305,7 @@ E thru 9</td>
       <td>Corey Conners(W) -2
 E thru 16</td>
       <td>Daniel Berger -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 11</td>
       <td>Jon Rahm +1
@@ -357,7 +357,7 @@ E thru 16</td>
       <td>Russell Henley +3
 +2 thru 16</td>
       <td>Xander Schauffele(W) +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout leftborder">Justin Thomas +4
 Not started</td>
       <td class="greyout">Louis Oosthuizen
@@ -375,7 +375,7 @@ E thru 16</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 9</td>
++2 thru 10</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
