--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:48:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:49:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -188,6 +188,22 @@ E thru 2</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 2</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Corey Conners -1
++1 thru 17</td>
+      <td>Tyrrell Hatton E
+E thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +2
++2 thru 10</td>
+      <td class="greyout">Sam Burns +5
++2 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith(W) -3
@@ -214,8 +230,8 @@ Not started</td>
 +1 thru 17</td>
       <td>Will Zalatoris E
 +1 thru 11</td>
-      <td class="greyout leftborder">Russell Henley +3
-+2 thru 16</td>
+      <td class="greyout leftborder">Russell Henley +2
++1 thru 17</td>
       <td class="greyout">Brooks Koepka +3
 E thru 10</td>
     </tr>
@@ -266,22 +282,6 @@ E thru 11</td>
 -1 thru 11</td>
       <td class="greyout">Viktor Hovland +2
 +2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Corey Conners -1
-+1 thru 17</td>
-      <td>Tyrrell Hatton +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 10</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
