--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:48:27 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:49:10 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -220,6 +220,22 @@ E thru 10</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+E thru 11</td>
+      <td>Corey Conners -1
++1 thru 17</td>
+      <td>Tyrrell Hatton E
+E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 11</td>
+      <td class="greyout leftborder">Shane Lowry +1
+E thru 2</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Tony Finau -1
@@ -284,22 +300,6 @@ E thru 11</td>
 E thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-E thru 11</td>
-      <td>Corey Conners -1
-+1 thru 17</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
-      <td>Tyrrell Hatton +1
-+1 thru 12</td>
-      <td class="greyout leftborder">Shane Lowry +1
-E thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler(W) -3
@@ -349,13 +349,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
       <td>Corey Conners -1
 +1 thru 17</td>
-      <td>Russell Henley +3
-+2 thru 16</td>
+      <td>Russell Henley +2
++1 thru 17</td>
       <td>Xander Schauffele(W) +4
 +2 thru 10</td>
       <td class="greyout leftborder">Justin Thomas +4
