--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:54:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:54:55 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,15 +157,15 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 11</td>
       <td>Tony Finau -1
 Not started</td>
-      <td>Will Zalatoris E
-+1 thru 11</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -204,22 +204,6 @@ E thru 10</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Matthew Fitzpatrick -1
-E thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 11</td>
-      <td>Shane Lowry +1
-E thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -228,26 +212,10 @@ E thru 11</td>
 +1 thru 17</td>
       <td>Tyrrell Hatton E
 E thru 13</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 E thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Daniel Berger -1
-E thru 1</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
-      <td>Will Zalatoris E
-+1 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 12</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -268,6 +236,22 @@ E thru 1</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Matthew Fitzpatrick -1
+E thru 10</td>
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -276,44 +260,28 @@ E thru 11</td>
 Not started</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
-      <td>Jon Rahm(W) +1
--1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 10</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 11</td>
-      <td>Dustin Johnson -2
-+1 thru 12</td>
-      <td>Jordan Spieth(W) +1
--1 thru 10</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 11</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris E
-+1 thru 11</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
       <td>Jordan Spieth +1
 -1 thru 10</td>
-      <td class="greyout leftborder">Shane Lowry +1
-E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E thru 12</td>
       <td class="greyout">Brooks Koepka +3
 E thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+E thru 1</td>
+      <td>Collin Morikawa E
+-1 thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -324,12 +292,28 @@ E thru 10</td>
 E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 -1 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 12</td>
       <td class="greyout">Robert MacIntyre +2
 +1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -2
+E thru 11</td>
+      <td>Dustin Johnson -2
++1 thru 12</td>
+      <td>Jordan Spieth(W) +1
+-1 thru 10</td>
+      <td>Viktor Hovland +2
++2 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 12</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -346,6 +330,22 @@ E thru 1</td>
 +2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Jordan Spieth +1
+-1 thru 10</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 12</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -365,13 +365,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">6</td>
       <td>Corey Conners -1
 +1 thru 17</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
       <td>Jordan Spieth +1
 -1 thru 10</td>
+      <td>Jon Rahm +2
+E thru 12</td>
       <td>Justin Thomas(W) +4
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele +4
@@ -381,13 +381,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
       <td>Viktor Hovland(W) +2
 +2 thru 11</td>
+      <td>Jon Rahm +2
+E thru 12</td>
       <td>Brooks Koepka +3
 E thru 10</td>
       <td class="greyout leftborder">Patrick Reed +3
